gcc/testsuite/rust/rustc/ui/issues/issue-50581.rs
fn main() {
    |_: [u8; break]| (); // { dg-error ".E0268." "" { target *-*-* } }
}

